# C_Utilities

./: client.c  ipc_shared.h  main.c  makefile  server.c
_cpp/: CMakeLists.txt  client.cpp  ipc_shared.h  makefile  server.cpp
util/: ipc.c  ipc.h  os.c  os.h  queue.c  queue.h  unix_socket.c  unix_socket.h
wait/: foward.h  net.h  processquery.cpp  query.cpp  system.drawio
wait/Dir/: Dir.sln
wait/Dir/Dir/: Dir.vcxproj  Dir.vcxproj.filters  NTFS.h  NTFS_Common.h  NTFS_FileRecord.h  Source.cpp  WinQuery.cpp  WinQuery.h  WinSec.cpp  cpp_string.h  cppstring.h  dir.cpp  dir.h  main.cpp  mft.cpp  mft.h  subprocess.cpp  subprocess.h
wait/Dir/Dir/NTFSParser/: NTFS_Attribute.h  NTFS_Common.h  NTFS_DataType.h  NTFS_FileRecord.h
wait/Dir_2/Dir/: Dir.vcxproj  Dir.vcxproj.filters  WinQuery.cpp  WinQuery.h  WinSec.cpp  WinSec.h  main.cpp
wait/UnloadLibrary/: UnloadLibrary.sln
wait/UnloadLibrary/Gullible/: Gullible.cpp  Gullible.vcxproj  Gullible.vcxproj.filters
wait/UnloadLibrary/GullibleLibrary/: GullibleLibrary.vcxproj  dllmain.cpp
wait/UnloadLibrary/SuspectLibrary/: SuspectLibrary.vcxproj  dllmain.cpp
wait/UnloadLibrary/UnloadLibrary/: DllUtils.cpp  DllUtils.h  UnloadLibrary.cpp  UnloadLibrary.vcxproj  UnloadLibrary.vcxproj.filters  dllhelper.h  kernel_ntdef.h  kernel_ntdll.h  kernel_ntdll32.h  kernel_ntdll64.h
wait/minizip/: main.c
